--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
     "@supabase/supabase-js": "^2.45.2",
+    "@types/leaflet": "^1.9.12",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.6.3",
