--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-               "node_modules/leaflet/dist/leaflet.css"
+              "src/styles.css"  
             ],
             "scripts": [],
             "server": "src/main.server.ts",
