--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "@supabase/supabase-js": "^2.45.2",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
