--- a/.hintrc
+++ b/.hintrc
@@ -3,36 +3,23 @@
     "development"
   ],
   "hints": {
-    "axe/name-role-value": [
-      "default",
-      {
-        "link-name": "off"
-      }
-    ],
     "axe/text-alternatives": [
       "default",
       {
         "image-alt": "off"
       }
     ],
-    "no-inline-styles": "off"
-    "compat-api/html": [
+    "axe/forms": [
       "default",
       {
-        "ignore": [
-          "iframe[allow]",
-          "iframe[loading]"
-        ]
+        "label": "off"
       }
     ],
-    "no-inline-styles": "off",
-    "axe/text-alternatives": [
+    "axe/parsing": [
       "default",
       {
-        "frame-title": "off",
-        "image-alt": "off"
+        "duplicate-id-active": "off"
       }
-    ],
-    "button-type": "off"
+    ]
   }
 }
