--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.4",
     "tslib": "^2.6.3",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -37,8 +39,10 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
+    "@types/google.maps": "^3.57.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.43",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
